--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
     "express": "^4.16.4",
@@ -100,5 +101,13 @@
     "supertest": "^4.0.2",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AsiaJoyG/boilermaker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AsiaJoyG/boilermaker/issues"
+  },
+  "homepage": "https://github.com/AsiaJoyG/boilermaker#readme"
 }
